--- a/src/app/home_page/aboutus/aboutus.component.html
+++ b/src/app/home_page/aboutus/aboutus.component.html
@@ -21,16 +21,16 @@
             <div class="aboutus_group_img">
               <div class="container">
                 <div class="row">
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-6">
                     <img class="img-fluid" src="assets/img/aboutus/aboutus1.svg" alt="">
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-6">
                     <img class="img-fluid" src="assets/img/aboutus/aboutus2.svg" alt="">
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-6">
                     <img class="img-fluid" src="assets/img/aboutus/aboutus3.svg" alt="">
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-6">
                     <img class="img-fluid" src="assets/img/aboutus/aboutus4.svg" alt="">
                   </div>
                 </div>
@@ -64,7 +64,91 @@
           </div>
           <div class="MEETOURTEAM_img">
             <!-- <img src="assets/img/aboutus/team.svg" class="img-fluid" alt="thinkahoy meet our team"> -->
-            <img src="assets/img/aboutus/team2.svg" class="img-fluid" alt="thinkahoy meet our team">
+            <!-- <img src="assets/img/aboutus/team2.svg" class="img-fluid" alt="thinkahoy meet our team"> -->
+            <h2>Meet Our Team</h2>
+
+            <div class="row">
+              <div class="col-md-3 offset-md-3">
+                <div class="team_main">
+                  <div class="team_img">
+                    <img src="assets/img/aboutus/team/Vinay-Datta.png" class="img-fluid mx-auto d-block" alt="Vinay Datta">
+                  </div>
+                  <div class="team_overly">
+                    <p>Vinay Datta</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 offset-md-3">
+                <div class="team_main">
+                  <div class="team_img">
+                    <img src="assets/img/aboutus/team/Karthik-Pisipaty.png" class="img-fluid mx-auto d-block" alt="Karthik Pisipaty">
+                  </div>
+                  <div class="team_overly">
+                    <p>Karthik Pisipaty</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-3">
+                <div class="team_main">
+                  <div class="team_img">
+                    <img src="assets/img/aboutus/team/Pramath-Patel.png" class="img-fluid mx-auto d-block" alt="Pramath Patel">
+                  </div>
+                  <div class="team_overly">
+                    <p>Pramath Patel</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 offset-md-3">
+                <div class="team_main">
+                  <div class="team_img">
+                    <img src="assets/img/aboutus/team/Soujatya-Sen.png" class="img-fluid mx-auto d-block" alt="Soujatya Sen">
+                  </div>
+                  <div class="team_overly">
+                    <p>Soujatya Sen</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-3 offset-md-3">
+                <div class="team_main">
+                  <div class="team_img">
+                    <img src="assets/img/aboutus/team/Jeanny-Paren.png" class="img-fluid mx-auto d-block" alt="Jeanny Paren">
+                  </div>
+                  <div class="team_overly">
+                    <p>Jeanny Paren</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 offset-md-3">
+                <div class="team_main">
+                  <div class="team_img">
+                    <img src="assets/img/aboutus/team/Manuel-Kost.png" class="img-fluid mx-auto d-block" alt="Manuel Kost">
+                  </div>
+                  <div class="team_overly">
+                    <p>Manuel Kost</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="row">
+              <div class="col-md-3">
+                <div class="team_main">
+                  <div class="team_img">
+                    <img src="assets/img/aboutus/team/Sreekrishna-Kotnur.png" class="img-fluid mx-auto d-block" alt="Sreekrishna Kotnur">
+                  </div>
+                  <div class="team_overly">
+                    <p>Sreekrishna Kotnur</p>
+                  </div>
+                </div>
+              </div>
+            </div>
 
           </div>
         </div>
