--- a/src/app/home_page/footer/footer.component.html
+++ b/src/app/home_page/footer/footer.component.html
@@ -17,19 +17,19 @@
                 <p class="footer_menuTitle">Useful Link</p>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+                <a class="nav-link" routerLink="/home" routerLinkActive="active" (click)="clickedOnLogo();">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/aboutus" routerLinkActive="active">About Us</a>
+                <a class="nav-link" routerLink="/aboutus" routerLinkActive="active" (click)="clickedOnLogo();">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/contactus" routerLinkActive="active">Contact Us</a>
+                <a class="nav-link" routerLink="/contactus" routerLinkActive="active" (click)="clickedOnLogo();">Contact Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/ourservice" routerLinkActive="active">Our Services</a>
+                <a class="nav-link" routerLink="/ourservice" routerLinkActive="active" (click)="clickedOnLogo();">Our Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/blog" routerLinkActive="active">Blog</a>
+                <a class="nav-link" routerLink="/blog/our-partners" routerLinkActive="active" (click)="clickedOnLogo();">Blog</a>
               </li>
             </ul>
           </div>
@@ -41,13 +41,13 @@
                 <p class="footer_menuTitle">Need Help?</p>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/faq" routerLinkActive="active">FAQs</a>
+                <a class="nav-link" routerLink="/faq" routerLinkActive="active" (click)="clickedOnLogo();">FAQs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/privacy-policy" routerLinkActive="active">Privacy Policy</a>
+                <a class="nav-link" routerLink="/privacy-policy" routerLinkActive="active" (click)="clickedOnLogo();">Privacy Policy</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/terms-conditions" routerLinkActive="active">Terms Conditions</a>
+                <a class="nav-link" routerLink="/terms-conditions" routerLinkActive="active" (click)="clickedOnLogo();">Terms Conditions</a>
               </li>
             </ul>
           </div>
@@ -74,12 +74,12 @@
   <section id="footer_bottom">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-8">
           <div class="copyright">
             <p>© 2020. All Rights Reserved.</p>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 col-4">
           <a href="#"><img src="assets/img/Secure.svg" class="rounded float-right" alt=""></a>
         </div>
       </div>
