--- a/src/app/home_page/homebody/homebody.component.html
+++ b/src/app/home_page/homebody/homebody.component.html
@@ -8,17 +8,25 @@
       <ng-template carouselSlide class="banner_iteam">
         <img src="assets/img/banner/banner1.png" (click)="video_banner(videobanner_model)">
       </ng-template>
+
       <ng-template carouselSlide class="banner_iteam">
         <img src="assets/img/banner/banner2.png">
       </ng-template>
+
       <ng-template carouselSlide class="banner_iteam">
         <img src="assets/img/banner/banner3.png">
       </ng-template>
+
       <ng-template carouselSlide class="banner_iteam">
-        <img src="assets/img/banner/banner1.png">
+        <img src="assets/img/banner/banner1.png" (click)="video_banner(videobanner_model)">
       </ng-template>
+
       <ng-template carouselSlide class="banner_iteam">
         <img src="assets/img/banner/banner2.png">
+      </ng-template>
+
+      <ng-template carouselSlide class="banner_iteam">
+        <img src="assets/img/banner/banner3.png">
       </ng-template>
 
     </owl-carousel-o>
@@ -81,7 +89,7 @@
 
 <section id="big_banner_img">
   <div class="big_banner_img_body">
-    <img src="assets/img/Excepteursint.svg" class="img-fluid" alt="ThinkAhoy">
+    <img src="assets/img/test.svg" class="img-fluid" alt="ThinkAhoy">
   </div>
 </section>
 
@@ -124,9 +132,7 @@
             <p class="JoinhandsinThinkAhoymission_numbers">
               12345
             </p>
-            <div id="shiva">
-              <span class="count">200</span>
-            </div>
+
             <p class="JoinhandsinThinkAhoymission_details">
               Lorem ipsum dolor sit amet, consetetur
               sadipscing elitr, sed diam nonumy eirmod
