--- a/src/app/home_page/ourservices/ourservices.component.html
+++ b/src/app/home_page/ourservices/ourservices.component.html
@@ -20,34 +20,35 @@
             <div class="row  no-gutters">
               <div class="col-md-4">
                 <div class="ourservice_img_card ourServiceFirstLine ">
-                  <a routerLink="/ourservice/business-service">
+                  <a routerLink="/ourservice/business-service" >
                     <img src="assets/img/ourservice/business-service.png" class="mx-auto d-block img-fluid"
-                      alt="thinkahoy business service">
+                      alt="thinkahoy business service" (click)="clickedOnLogo();">
                   </a>
                 </div>
                 <div class="ourservice_img_card ourServiceFirstLine">
-                  <a routerLink="/ourservice/office-space">
+                  <a routerLink="/ourservice/office-space" >
                     <img src="assets/img/ourservice/officespace.png" class="mx-auto d-block img-fluid"
-                      alt="thinkahoy office space"></a>
+                      alt="thinkahoy office space" (click)="clickedOnLogo();">
+                    </a>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="ourservice_img_card">
-                  <a routerLink="/ourservice/current-account">
+                  <a routerLink="/ourservice/current-account" >
                     <img src="assets/img/ourservice/current-account.png" class="mx-auto d-block img-fluid"
-                      alt="thinkahoy current account"></a>
+                      alt="thinkahoy current account" (click)="clickedOnLogo();"></a>
                 </div>
                 <div class="ourservice_img_card">
-                  <a routerLink="/ourservice/mentors-coaching">
+                  <a routerLink="/ourservice/mentors-coaching" >
                     <img src="assets/img/ourservice/mentors-coaching.png" class="mx-auto d-block img-fluid"
-                      alt="thinkahoy mentors coaching"></a>
+                      alt="thinkahoy mentors coaching" (click)="clickedOnLogo();"></a>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="ourservice_img_card ourservice_img_card-last">
-                  <a routerLink="/ourservice/insights-on-demand" routerLinkActive="active">
+                  <a routerLink="/ourservice/insights-on-demand" >
                     <img src="assets/img/ourservice/insights-on-demand.png" class="mx-auto d-block img-fluid"
-                      alt="thinkahoy insights on demand"></a>
+                      alt="thinkahoy insights on demand" (click)="clickedOnLogo();"></a>
                 </div>
               </div>
             </div>
