--- a/src/app/ourservice_page/business-service/business-service.component.html
+++ b/src/app/ourservice_page/business-service/business-service.component.html
@@ -29,30 +29,30 @@
       <div class="row">
         <div class="col-md-3">
           <div class="detailed">
-            <a routerLink="/ourservice/office-space">
+            <a routerLink="/ourservice/office-space" >
               <img src="assets/img/ourservice/officespace.png" class="mx-auto d-block img-fluid"
-                alt="thinkahoy office space"></a>
+                alt="thinkahoy office space" (click)="clickedOnLogo();"></a>
           </div>
         </div>
         <div class="col-md-3">
           <div class="detailed">
-            <a routerLink="/ourservice/current-account">
+            <a routerLink="/ourservice/current-account" >
               <img src="assets/img/ourservice/current-account.png" class="mx-auto d-block img-fluid"
-                alt="thinkahoy current account"></a>
+                alt="thinkahoy current account" (click)="clickedOnLogo();"></a>
           </div>
         </div>
         <div class="col-md-3">
           <div class="detailed">
-            <a routerLink="/ourservice/mentors-coaching">
+            <a routerLink="/ourservice/mentors-coaching" >
               <img src="assets/img/ourservice/mentors-coaching.png" class="mx-auto d-block img-fluid"
-                alt="thinkahoy mentors coaching"></a>
+                alt="thinkahoy mentors coaching" (click)="clickedOnLogo();"></a>
           </div>
         </div>
         <div class="col-md-3">
           <div class="detailed">
-            <a routerLink="/ourservice/insights-on-demand" routerLinkActive="active">
+            <a routerLink="/ourservice/insights-on-demand" routerLinkActive="active" >
               <img src="assets/img/ourservice/insights-on-demand.png" class="mx-auto d-block img-fluid"
-                alt="thinkahoy insights on demand"></a>
+                alt="thinkahoy insights on demand" (click)="clickedOnLogo();"></a>
           </div>
         </div>
       </div>
