--- a/src/app/ourservice_page/current-account/current-account.component.html
+++ b/src/app/ourservice_page/current-account/current-account.component.html
@@ -31,14 +31,14 @@
           <div class="detailed">
             <a routerLink="/ourservice/office-space">
               <img src="assets/img/ourservice/officespace.png" class="mx-auto d-block img-fluid"
-                alt="thinkahoy office space"></a>
+                alt="thinkahoy office space" (click)="clickedOnLogo();"></a>
           </div>
         </div>
         <div class="col-md-3">
           <div class="detailed">
             <a routerLink="/ourservice/business-service">
                 <img src="assets/img/ourservice/business-service.png" class="mx-auto d-block img-fluid"
-                  alt="thinkahoy business service">
+                  alt="thinkahoy business service" (click)="clickedOnLogo();">
               </a>
           </div>
         </div>
@@ -46,14 +46,14 @@
           <div class="detailed">
             <a routerLink="/ourservice/mentors-coaching">
               <img src="assets/img/ourservice/mentors-coaching.png" class="mx-auto d-block img-fluid"
-                alt="thinkahoy mentors coaching"></a>
+                alt="thinkahoy mentors coaching" (click)="clickedOnLogo();"></a>
           </div>
         </div>
         <div class="col-md-3">
           <div class="detailed">
-            <a routerLink="/ourservice/insights-on-demand" routerLinkActive="active">
+            <a routerLink="/ourservice/insights-on-demand">
               <img src="assets/img/ourservice/insights-on-demand.png" class="mx-auto d-block img-fluid"
-                alt="thinkahoy insights on demand"></a>
+                alt="thinkahoy insights on demand" (click)="clickedOnLogo();"></a>
           </div>
         </div>
       </div>
