--- a/src/app/ourservice_page/office-space/office-space.component.html
+++ b/src/app/ourservice_page/office-space/office-space.component.html
@@ -29,31 +29,31 @@
       <div class="row">
         <div class="col-md-3">
           <div class="detailed">
-            <a routerLink="/ourservice/current-account">
+            <a routerLink="/ourservice/current-account" >
                 <img src="assets/img/ourservice/current-account.png" class="mx-auto d-block img-fluid"
-                  alt="thinkahoy current account"></a>
+                  alt="thinkahoy current account" (click)="clickedOnLogo();"></a>
           </div>
         </div>
         <div class="col-md-3">
           <div class="detailed">
-            <a routerLink="/ourservice/business-service">
+            <a routerLink="/ourservice/business-service" >
                 <img src="assets/img/ourservice/business-service.png" class="mx-auto d-block img-fluid"
-                  alt="thinkahoy business service">
+                  alt="thinkahoy business service" (click)="clickedOnLogo();">
               </a>
-          </div>
+          </div>s
         </div>
         <div class="col-md-3">
           <div class="detailed">
-            <a routerLink="/ourservice/mentors-coaching">
+            <a routerLink="/ourservice/mentors-coaching" >
               <img src="assets/img/ourservice/mentors-coaching.png" class="mx-auto d-block img-fluid"
-                alt="thinkahoy mentors coaching"></a>
+                alt="thinkahoy mentors coaching" (click)="clickedOnLogo();"></a>
           </div>
         </div>
         <div class="col-md-3">
           <div class="detailed">
-            <a routerLink="/ourservice/insights-on-demand" routerLinkActive="active">
+            <a routerLink="/ourservice/insights-on-demand" >
               <img src="assets/img/ourservice/insights-on-demand.png" class="mx-auto d-block img-fluid"
-                alt="thinkahoy insights on demand"></a>
+                alt="thinkahoy insights on demand" (click)="clickedOnLogo();"></a>
           </div>
         </div>
       </div>
